--- a/lang/en/pf2e-kingmaker.kingmaker.json
+++ b/lang/en/pf2e-kingmaker.kingmaker.json
@@ -1,5 +1,5 @@
 {
-    "label": "Adventures",
+    "label": "Pathfinder: Kingmaker",
     "entries": {
         "Pathfinder: Kingmaker": {
             "name": "Pathfinder: Kingmaker",
