--- a/lang/en/pf2e-ap196-199-season-of-ghosts.adventures.json
+++ b/lang/en/pf2e-ap196-199-season-of-ghosts.adventures.json
@@ -269,6 +269,7 @@
         "actors": {
             "publicNotes": "system.details.publicNotes",
             "privateNotes": "system.details.privateNotes",
+            "blurb": "system.details.blurb",
             "languagesDetails": "system.details.languages.details"
         }
     }
