--- a/lang/en/pf2e-beginner-box.adventures.json
+++ b/lang/en/pf2e-beginner-box.adventures.json
@@ -1415,6 +1415,7 @@
         "actors": {
             "publicNotes": "system.details.publicNotes",
             "privateNotes": "system.details.privateNotes",
+            "blurb": "system.details.blurb",
             "languagesDetails": "system.details.languages.details"
         },
         "gmNote": "system.description.gm"
