--- a/lang/en/pf2e-rusthenge.adventures.json
+++ b/lang/en/pf2e-rusthenge.adventures.json
@@ -987,7 +987,14 @@
                 },
                 "Summoning Chamber": {
                     "name": "Summoning Chamber",
-                    "tokenName": "Summoning Chamber"
+                    "tokenName": "Summoning Chamber",
+                    "items": {
+                        "Horn of Rust": {
+                            "name": "Horn of Rust",
+                            "description": "<p>This rusted, coiled iron horn is sizable, appearing similar in shape to a ram's horn but measuring nearly 2 feet in diameter. Flakes of rust constantly fall from this item, and it leaves hands with a rusty red stain that lingers.</p><p>Some of the Horn of Rust's activated powers consume charges, similar to how a magic staff functions. When its charges are reduced to zero, its activations that require charges can still be used normally. It can be prepared with charges in the same method as a staff, and it counts as a staff for the limit of how many staves you can prepare in a day.</p><hr /><p><strong>Activate</strong> Cast a Spell</p><p><strong>Effect</strong> You expend a number of charges from the Horn of Rust to cast a spell from the following list.</p><ul><li>Cantrip @UUID[Compendium.pf2e.spells-srd.Item.qwZBXN6zBoB9BHXE]</li><li>1st @UUID[Compendium.pf2e.spells-srd.Item.1meVElIu1CEVYWkv]</li><li>2nd <em>@UUID[Compendium.pf2e.spells-srd.Item.1xbFBQDRs0hT5xZ9]</em></li><li>3rd @UUID[Compendium.pf2e.spells-srd.Item.GKpEcy9WId6NJvtx]</li></ul><p>The following activations do not consume charges from the Horn of Rust, and they can be utilized even when the artifact has no charges available.</p><hr /><p><strong>Activate</strong> <span class=\"action-glyph\">2</span> envision, Interact</p><p><strong>Frequency</strong> once per hour</p><p><strong>Effect</strong> You blow on the horn to unleash a swirling aura of jagged, rusty metal shards that orbit you in a @Template[type:emanation|distance:5] for 1 minute. The shards grant you a +1 item bonus to AC. Creatures and objects that begin their turn in this area take @Damage[6d6[slashing]] damage from the shards (@Check[type:reflex|dc:19|basic:true] save). A creature damaged by this aura is exposed to a potent form of tetanus that has a level equal to the Horn of Rust's level and has a DC 19 Fortitude save. Worshippers of Xar-Azmak are immune to this effect.</p><p><strong>Tetanus</strong> An infection introduced through open wounds, tetanus can produce stiffness, muscle spasms strong enough to break bones, and ultimately death.</p><p><strong>Saving Throw</strong> @Check[type:fortitude|dc:19|traits:disease]</p><p><strong>Onset</strong> 10 days</p><p><strong>Stage 1</strong> @UUID[Compendium.pf2e.conditionitems.Item.i3OJZU2nk64Df3xm] (1 week)</p><p><strong>Stage 2</strong> @UUID[Compendium.pf2e.conditionitems.Item.i3OJZU2nk64Df3xm] and can't speak (1 day)</p><p><strong>Stage 3</strong> @UUID[Compendium.pf2e.conditionitems.Item.6uEgoh53GbXuHpTF] with spasms (1 day)</p><p><strong>Stage 4</strong> death</p><hr /><p><strong>Activate</strong> <span class=\"action-glyph\">2</span> envision, Interact</p><p><strong>Frequency</strong> once per day</p><p><strong>Effect</strong> You place the horn's bell against a diseased creature and then inhale into the mouthpiece rather than blow into it. The horn attempts to draw out the disease, casting a remove disease spell to your specification with a counteract modifier of [[/r 1d20+11 #Counteract]]{+11}. If the Horn of Rust succeeds at countering a disease, it gains a number of charges equal to half the disease's level (rounded down, minimum 1). If it critically fails, not only is the disease not countered, but you are exposed to the disease and must attempt a saving throw against it to resist contracting the affliction.</p>",
+                            "gmNote": "<p>While the Horn of Rust's power has diminished over the ages since Xar-Azmak's death, those who carry it are still subject to its palpable chaotic influences. If you aren't chaotic evil, you are @UUID[Compendium.pf2e.conditionitems.Item.MIRkyAjyBeXivMa7] while carrying or using the Horn of Rust, and if you're lawful or good, you are instead @UUID[Compendium.pf2e.conditionitems.Item.MIRkyAjyBeXivMa7] and @UUID[Compendium.pf2e.conditionitems.Item.e1XGnhKNSQIm5IXg]. The longer a non-worshipper of Xar-Azmak carries the Horn of Rust, the greater the chances a vloriak or other demon (or group of demons) will seek them out to slay them and reclaim the artifact. The frequency of these attacks is left to the GM to determine, but they should occur no less frequently than once a month. These attacks should always be at least moderate encounters; if the PCs don't take them seriously, the attacks could eventually escalate into severe encounters.</p><hr /><p><strong>Xar-Azmak Resurrected</strong> If the demon lord Xar-Azmak is resurrected, the Horn of Rust becomes a 20th-level item. Its swirling aura of rusty metal shards grants a +3 item bonus to AC, deals @Damage[20d6[slashing]] damage (@Check[type:reflex|dc:43|basic:true] save), and the tetanus has a @Check[type:fortitude|dc:43] save. It has a [[/r 1d20+31 #Counteract]]{+31} counteract modifier against diseases. You can cast the following additional spells using the artifact's charges.</p><ul><li>4th <em>@UUID[Compendium.pf2e.spells-srd.Item.0fYE64odlKqISzft]</em></li><li>5th <em>@UUID[Compendium.pf2e.spells-srd.Item.MlpbeZ61Euhl0d60]</em></li><li>6th <em>@UUID[Compendium.pf2e.spells-srd.Item.r7ihOgKv19eJQnik]</em></li><li>7th <em>@UUID[Compendium.pf2e.spells-srd.Item.sX2o0HH4RjJDAZ8C]</em> (chaotic or evil only)</li><li>8th <em>@UUID[Compendium.pf2e.spells-srd.Item.M0jQlpQYUr0pp2Sv]</em></li><li>9th <em>@UUID[Compendium.pf2e.spells-srd.Item.ihbRf964JDXztcy3]</em></li><li>10th <em>@UUID[Compendium.pf2e.spells-srd.Item.wLIvH0AT1u7oa64N]</em><hr /></li></ul><p><strong>Destruction </strong>The Horn of Rust must be washed with the juice of a fresh peach plucked from an immortal arboreal, then dipped into a pool of molten dawnsilver, and finally cooled with the tears of a remorseful demon. Alternatively, GMs can devise a series of their own quests for the PCs and send them to destroy this ancient artifact. Once the horn is destroyed, Xar-Azmak can never be resurrected.</p>"
+                        }
+                    }
                 },
                 "Rustsworn Initiate": {
                     "name": "Rustsworn Initiate",
@@ -1521,8 +1528,14 @@
                         "Demonic Bloodline Spells": {
                             "name": "Demonic Bloodline Spells"
                         },
+                        "Horn of Rust": {
+                            "name": "Horn of Rust",
+                            "description": "<p>This rusted, coiled iron horn is sizable, appearing similar in shape to a ram's horn but measuring nearly 2 feet in diameter. Flakes of rust constantly fall from this item, and it leaves hands with a rusty red stain that lingers.</p><p>Some of the Horn of Rust's activated powers consume charges, similar to how a magic staff functions. When its charges are reduced to zero, its activations that require charges can still be used normally. It can be prepared with charges in the same method as a staff, and it counts as a staff for the limit of how many staves you can prepare in a day.</p><hr /><p><strong>Activate</strong> Cast a Spell</p><p><strong>Effect</strong> You expend a number of charges from the Horn of Rust to cast a spell from the following list.</p><ul><li>Cantrip <em>@UUID[Compendium.pf2e.spells-srd.Item.qwZBXN6zBoB9BHXE]</em></li><li>1st <em>@UUID[Compendium.pf2e.spells-srd.Item.1meVElIu1CEVYWkv]</em></li><li>2nd <em>@UUID[Compendium.pf2e.spells-srd.Item.1xbFBQDRs0hT5xZ9]</em></li><li>3rd <em>@UUID[Compendium.pf2e.spells-srd.Item.GKpEcy9WId6NJvtx]</em></li></ul><p>The following activations do not consume charges from the Horn of Rust, and they can be utilized even when the artifact has no charges available.</p><hr /><p><strong>Activate</strong> <span class=\"action-glyph\">2</span> envision, Interact</p><p><strong>Frequency</strong> once per hour</p><p><strong>Effect</strong> You blow on the horn to unleash a swirling aura of jagged, rusty metal shards that orbit you in a @Template[type:emanation|distance:5] for 1 minute. The shards grant you a +1 item bonus to AC. Creatures and objects that begin their turn in this area take @Damage[6d6[slashing]] damage from the shards (@Check[type:reflex|dc:19|basic:true] save). A creature damaged by this aura is exposed to a potent form of tetanus that has a level equal to the Horn of Rust's level and has a DC 19 Fortitude save. Worshippers of Xar-Azmak are immune to this effect.</p><p><strong>Tetanus</strong> An infection introduced through open wounds, tetanus can produce stiffness, muscle spasms strong enough to break bones, and ultimately death.</p><p><strong>Saving Throw</strong> @Check[type:fortitude|dc:19|traits:disease]</p><p><strong>Onset</strong> 10 days</p><p><strong>Stage 1</strong> @UUID[Compendium.pf2e.conditionitems.Item.i3OJZU2nk64Df3xm] (1 week)</p><p><strong>Stage 2</strong> @UUID[Compendium.pf2e.conditionitems.Item.i3OJZU2nk64Df3xm] and can't speak (1 day)</p><p><strong>Stage 3</strong> @UUID[Compendium.pf2e.conditionitems.Item.6uEgoh53GbXuHpTF] with spasms (1 day)</p><p><strong>Stage 4</strong> death</p><hr /><p><strong>Activate</strong> <span class=\"action-glyph\">2</span> envision, Interact</p><p><strong>Frequency</strong> once per day</p><p><strong>Effect</strong> You place the horn's bell against a diseased creature and then inhale into the mouthpiece rather than blow into it. The horn attempts to draw out the disease, casting a remove disease spell to your specification with a counteract modifier of [[/r 1d20+11 #Counteract]]{+11}. If the Horn of Rust succeeds at countering a disease, it gains a number of charges equal to half the disease's level (rounded down, minimum 1). If it critically fails, not only is the disease not countered, but you are exposed to the disease and must attempt a saving throw against it to resist contracting the affliction.</p>",
+                            "gmNote": "<p>While the Horn of Rust's power has diminished over the ages since Xar-Azmak's death, those who carry it are still subject to its palpable chaotic influences. If you aren't chaotic evil, you are @UUID[Compendium.pf2e.conditionitems.Item.MIRkyAjyBeXivMa7] while carrying or using the Horn of Rust, and if you're lawful or good, you are instead @UUID[Compendium.pf2e.conditionitems.Item.MIRkyAjyBeXivMa7] and @UUID[Compendium.pf2e.conditionitems.Item.e1XGnhKNSQIm5IXg]. The longer a non-worshipper of Xar-Azmak carries the Horn of Rust, the greater the chances a vloriak or other demon (or group of demons) will seek them out to slay them and reclaim the artifact. The frequency of these attacks is left to the GM to determine, but they should occur no less frequently than once a month. These attacks should always be at least moderate encounters; if the PCs don't take them seriously, the attacks could eventually escalate into severe encounters.</p><hr /><p><strong>Xar-Azmak Resurrected</strong> If the demon lord Xar-Azmak is resurrected, the Horn of Rust becomes a 20th-level item. Its swirling aura of rusty metal shards grants a +3 item bonus to AC, deals @Damage[20d6[slashing]] damage (@Check[type:reflex|dc:43|basic:true] save), and the tetanus has a @Check[type:fortitude|dc:43] save. It has a [[/r 1d20+31 #Counteract]]{+31} counteract modifier against diseases. You can cast the following additional spells using the artifact's charges.</p><ul><li>4th <em>@UUID[Compendium.pf2e.spells-srd.Item.0fYE64odlKqISzft]</em></li><li>5th <em>@UUID[Compendium.pf2e.spells-srd.Item.MlpbeZ61Euhl0d60]</em></li><li>6th <em>@UUID[Compendium.pf2e.spells-srd.Item.r7ihOgKv19eJQnik]</em></li><li>7th <em>@UUID[Compendium.pf2e.spells-srd.Item.sX2o0HH4RjJDAZ8C]</em> (chaotic or evil only)</li><li>8th <em>@UUID[Compendium.pf2e.spells-srd.Item.M0jQlpQYUr0pp2Sv]</em></li><li>9th <em>@UUID[Compendium.pf2e.spells-srd.Item.ihbRf964JDXztcy3]</em></li><li>10th <em>@UUID[Compendium.pf2e.spells-srd.Item.wLIvH0AT1u7oa64N]</em><hr /></li></ul><p><strong>Destruction </strong>The Horn of Rust must be washed with the juice of a fresh peach plucked from an immortal arboreal, then dipped into a pool of molten dawnsilver, and finally cooled with the tears of a remorseful demon. Alternatively, GMs can devise a series of their own quests for the PCs and send them to destroy this ancient artifact. Once the horn is destroyed, Xar-Azmak can never be resurrected.</p>"
+                        },
                         "Key": {
-                            "name": "Key"
+                            "name": "Key",
+                            "gmNote": "<p>key to chest in area <strong>E2</strong></p>"
                         },
                         "Pick": {
                             "name": "Pick"
@@ -1638,7 +1651,8 @@
                     "items": {
                         "Fine Captain's Hat": {
                             "name": "Fine Captain's Hat",
-                            "description": "<p>A well made tricorn.</p>"
+                            "description": "<p>A well made tricorn.</p>",
+                            "gmNote": "<p>Janis allows the PCs to keep the feather token if they return this hat as proof of the captain’s fate.</p>"
                         }
                     }
                 },
@@ -1678,7 +1692,8 @@
                     "blurb": "Human smith",
                     "items": {
                         "Key": {
-                            "name": "Key"
+                            "name": "Key",
+                            "gmNote": "<p>Secure storage key</p>"
                         },
                         "Light Hammer": {
                             "name": "Light Hammer"
@@ -2240,7 +2255,8 @@
                     "items": {
                         "Swordfish’s Log": {
                             "name": "Swordfish’s Log",
-                            "description": "<p>Swordfish’s log written in Thassilonian.</p>"
+                            "description": "<p>Swordfish’s log written in Thassilonian.</p>",
+                            "gmNote": "<p>@UUID[JournalEntry.pf2sa06406handou.JournalEntryPage.06handout0100000]</p>"
                         }
                     }
                 },
@@ -2284,7 +2300,8 @@
                     "tokenName": "Derrol's Gift",
                     "items": {
                         "Tiny Brass Key set with Small Gemstones": {
-                            "name": "Tiny Brass Key set with Small Gemstones"
+                            "name": "Tiny Brass Key set with Small Gemstones",
+                            "gmNote": "<p>At your discretion, this key could play an important role in a future adventure—in particular, if you decide to continue this group’s adventures into Seven Dooms for Sandpoint, this could be the key to the mysterious clockwork songbird that the PCs will slowly reconstruct in that adventure.</p>"
                         }
                     }
                 },
@@ -2294,7 +2311,14 @@
                 },
                 "Wooden Post": {
                     "name": "Wooden Post",
-                    "tokenName": "Wooden Post"
+                    "tokenName": "Wooden Post",
+                    "items": {
+                        "Bolt": {
+                            "name": "Bolt",
+                            "description": "<p>Shorter than traditional arrows but similar in construction, bolts are the ammunition used by crossbows.</p>",
+                            "gmNote": "<p>On the eastern side of the bridge, a single bolt from a hand crossbow is embedded in a wooden post near the bridgeworks. An examination of the bolt confirms it to be the same size capable of inflicting the wound found on Blanton’s body, and if it’s extracted from the pole and examined, tiny traces of giant centipede venom that remained on the bolt (and avoided being washed away by the rain as a result of being lodged in the wood) can be identified with a successful DC 15 Crafting check to Identify Alchemy.</p>"
+                        }
+                    }
                 },
                 "Junior Barracks": {
                     "name": "Junior Barracks",
@@ -2402,6 +2426,7 @@
             "privateNotes": "system.details.privateNotes",
             "blurb": "system.details.blurb",
             "languagesDetails": "system.details.languages.details",
+            "gmNote": "system.description.gm",
             "unidentified": "system.identification.unidentified.name",
             "unidentified_desc": "system.identification.unidentified.data.description.value"
         }
