--- a/lang/en/pf2e-ap197-let-the-leaves-fall.adventures.json
+++ b/lang/en/pf2e-ap197-let-the-leaves-fall.adventures.json
@@ -1096,7 +1096,9 @@
                         "Yen Rui’s Notes": {
                             "name": "Yen Rui’s Notes",
                             "description": "<p>The open book under the skull contains Yen Rui’s notes.</p>",
-                            "gmNote": "<p>The open book under the skull contains Yen Rui’s notes, giving the PCs access to the @UUID[JournalEntry.pf2ap19704inther.JournalEntryPage.04e11hiddenlib00] if, instead of speaking to her, they decide to destroy the poltergeists.</p>"
+                            "gmNote": "<p>The open book under the skull contains Yen Rui’s notes, giving the PCs access to the @UUID[JournalEntry.pf2ap19704inther.JournalEntryPage.04e11hiddenlib00] if, instead of speaking to her, they decide to destroy the poltergeists.</p>",
+                            "unidentified": "Open Book",
+                            "unidentified_desc": "<p>An open Book.</p>"
                         }
                     }
                 },
